--- a/acj/static/less/variables_mixins.less
+++ b/acj/static/less/variables_mixins.less
@@ -10,6 +10,7 @@
 @bkgrd-gray: #F9F9F9;        /*   bkgrd-gray = #F9F9F9       */
 @border-gray: #E7E7E7;       /*   border-gray = #E7E7E7      */
 @text-color: #333;           /*   text-color = #333          */
+@required-red: #A94442;      /*   required-red = #A94442     */
 
 /* border radius */
 .border-radius(@l-top:5px, @r-top:5px, @r-bottom:5px, @l-bottom:5px) {
